# OpenNPU

./: .gitignore  README.md  pyproject.toml  view_circuit.py
ex1/: VERILOG.md  mac_unit.v  makefile  tb_mac_unit.cpp
